@@ -15,7 +15,6 @@ import java.io.BufferedWriter;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.time.ZonedDateTime;
-import java.util.UUID;
 
 public class OnLiteBanEvents implements Listener, Runnable {
 
@@ -29,7 +28,6 @@ public class OnLiteBanEvents implements Listener, Runnable {
             @Override
             public void entryAdded(Entry entry) {
 
-                final UUID executorUUID = UUID.fromString(entry.getExecutorUUID());
                 final String entryType = entry.getType().toUpperCase();
                 final String executorName = entry.getExecutorName();
                 final String duration = entry.getDurationString();
@@ -37,60 +35,26 @@ public class OnLiteBanEvents implements Listener, Runnable {
                 final String reason = entry.getReason();
                 final boolean isSilent = entry.isSilent();
 
-                assert executorName != null;
                 final Player player = Bukkit.getPlayer(executorName);
-                assert player != null;
+                final String playerUUID = player == null ? "" : player.getUniqueId().toString();
 
                 // Log To Files
                 if (Data.isLogToFiles) {
 
-                    if (Data.isStaffEnabled && player.hasPermission(Data.loggerStaffLog)) {
+                    try (final BufferedWriter out = new BufferedWriter(new FileWriter(FileHandler.getLiteBansFile(), true))) {
 
-                        try (final BufferedWriter out = new BufferedWriter(new FileWriter(FileHandler.getStaffFile(), true))) {
+                        out.write(main.getMessages().get().getString("Files.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", duration).replace("%type%", entryType).replace("%silent%", String.valueOf(isSilent)).replace("%uuid%", playerUUID) + "\n");
 
-                            out.write(main.getMessages().get().getString("Files.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", duration).replace("%type%", entryType).replace("%silent%", String.valueOf(isSilent)).replace("%uuid%", executorUUID.toString()) + "\n");
+                    } catch (final IOException e) {
 
-                        } catch (final IOException e) {
-
-                            Log.warning("An error occurred while logging into the appropriate file.");
-                            e.printStackTrace();
-                        }
-                    } else {
-
-                        try (final BufferedWriter out = new BufferedWriter(new FileWriter(FileHandler.getLiteBansFile(), true))) {
-
-                            out.write(main.getMessages().get().getString("Files.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", duration).replace("%type%", entryType).replace("%silent%", String.valueOf(isSilent)).replace("%uuid%", executorUUID.toString()) + "\n");
-
-                        } catch (final IOException e) {
-
-                            Log.warning("An error occurred while logging into the appropriate file.");
-                            e.printStackTrace();
-
-                        }
+                        Log.warning("An error occurred while logging into the appropriate file.");
+                        e.printStackTrace();
                     }
                 }
 
                 // Discord Integration
-                if (main.getDiscordFile().getBoolean("Discord.Enable")) {
-
-                    if (player == null) { // This is essential when performed by the console
-
-                        if (!main.getMessages().get().getString("Discord.Extras.LiteBans").isEmpty())
-                            main.getDiscord().advancedBan(main.getMessages().get().getString("Discord.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", duration).replace("%type%", entryType).replace("%silent%", String.valueOf(isSilent)).replace("%uuid%", executorUUID.toString()), false);
-
-                    } else if (!player.hasPermission(Data.loggerExemptDiscord)) {
-
-                        if (Data.isStaffEnabled && player.hasPermission(Data.loggerStaffLog)) {
-
-                            if (!main.getMessages().get().getString("Discord.Extras.LiteBans").isEmpty())
-                                main.getDiscord().staffChat(executorName, executorUUID, main.getMessages().get().getString("Discord.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", duration).replace("%type%", entryType).replace("%silent%", String.valueOf(isSilent)).replace("%uuid%", executorUUID.toString()), false);
-
-                        } else {
-                            if (!main.getMessages().get().getString("Discord.Extras.LiteBans").isEmpty())
-                                main.getDiscord().advancedBan(main.getMessages().get().getString("Discord.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", duration).replace("%type%", entryType).replace("%silent%", String.valueOf(isSilent)).replace("%uuid%", executorUUID.toString()), false);
-                        }
-                    }
-                }
+                if (main.getDiscordFile().getBoolean("Discord.Enable") && !main.getMessages().get().getString("Discord.Extras.LiteBans").isEmpty())
+                    main.getDiscord().liteBans(main.getMessages().get().getString("Discord.Extras.LiteBans").replace("%time%", Data.dateTimeFormatter.format(ZonedDateTime.now())).replace("%executor%", executorName).replace("%executed_on%", onWho).replace("%reason%", reason).replace("%expiration%", String.valueOf(duration)).replace("%type%", entryType).replace("%uuid%", playerUUID).replace("%silent%", String.valueOf(isSilent)), false);
 
                 // External
                 if (Data.isExternal) {
