@@ -213,6 +213,7 @@ Fixes
     [!] Null Error when a player dies from /kill that's executed from the console
     [!] An issue when both Blacklisted and whitelisted commands are enabled
     [!] Error when an AdvancedBan command is executed through console
+    [!] LiteBans error when executing a command through console
 
 Changes
     [*] Remade permissions which will log OP and NOT OP players until they're permitted with the exempt permission
